--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ DEFAULT_MAILER_NAME=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=
+
+# DATABASE CONECTION
+# DATABASE_URL="postgresql://postgres:{senha}@localhost:5432/{nome_do_projeto}?schema=public"
