--- a/.github/workflows/nodejs-digital-ocean-deploy.yml
+++ b/.github/workflows/nodejs-digital-ocean-deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.2
         with:
-          node-version: 12.x
+          node-version: 20.x
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
@@ -37,7 +37,7 @@ jobs:
         run: yarn build
 
       - name: Copy dist to Digital Ocean
-        uses: appleboy/scp-action@master
+        uses: appleboy/scp-action@v0.1.3
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
@@ -58,5 +58,7 @@ jobs:
             source ~/.nvm/nvm.sh
             npm --help
             cd ~/nome-do-seu-repo 
+            yarn 
             yarn prisma migrate deploy
-            pm2 restart nome-do-seu-server
+            yarn prisma generate
+            pm2 restart nome-do-seu-server --update-env
