--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "lint": "eslint src --ext ts,tsx",
     "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
-    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files"
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
+    "schema": "prisma-import --schemas src/shared/infra/prisma/config.prisma --schemas src/modules/*/infra/prisma/entities/*.prisma --output src/shared/infra/prisma/schema.prisma --force"
   },
   "prisma": {
     "schema": "src/shared/infra/prisma/schema.prisma"
@@ -40,20 +41,22 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
-    "@prisma/client": "^3.14.0",
+    "@prisma/client": "5.13.0",
     "aws-sdk": "^2.846.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-validator": "^7.1.0",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.4.18",
     "openapi-types": "^10.0.0",
     "pg": "^8.5.1",
-    "prisma": "^3.14.0",
+    "prisma": "5.13.0",
     "prisma-aurora": "^1.3.6",
+    "prisma-import": "^1.0.5",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.3.0",
     "tsyringe": "^4.4.0",
