--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,8 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=
 
 # DATABASE CONECTION
-# DATABASE_URL="postgresql://postgres:{senha}@localhost:5432/{nome_do_projeto}?schema=public"
+# DATABASE_URL="postgresql://postgres:password@localhost:5432/nome_do_projeto?schema=public"
+
+# Para criar o banco de dados descrito na variável acima utilize o seguinte comando:
+# docker run -d --name nome_do_container -e POSTGRES_USERNAME=postgres -e POSTGRES_PASSWORD=password -e POSTGRES_DATABASE=nome_do_projeto -p 5432:5432 postgres
+# !! Não utilize esse comando para gerar o banco de dados do deploy !!
