--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "2.22.1",
     "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.5"
+    "typescript": "^5.6.3"
   },
   "dependencies": {
-    "@prisma/client": "5.13.0",
+    "@prisma/client": "^5.21.1",
     "aws-sdk": "^2.846.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -54,11 +54,11 @@
     "nodemailer": "^6.4.18",
     "openapi-types": "^10.0.0",
     "pg": "^8.5.1",
-    "prisma": "5.13.0",
+    "prisma": "^5.21.1",
     "prisma-import": "^1.0.5",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.3.0",
-    "tsyringe": "^4.4.0",
+    "tsyringe": "^4.8.0",
     "typeorm": "^0.2.31",
     "uuid": "^8.3.2"
   }
