--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "schema": "prisma-import --schemas src/shared/infra/prisma/config.prisma --schemas src/modules/*/infra/prisma/entities/*.prisma --output src/shared/infra/prisma/schema.prisma --force"
   },
   "prisma": {
-    "schema": "src/shared/infra/prisma/schema.prisma"
+    "schema": "src/shared/infra/prisma/schema"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.17",
@@ -55,7 +55,6 @@
     "openapi-types": "^10.0.0",
     "pg": "^8.5.1",
     "prisma": "^5.21.1",
-    "prisma-import": "^1.0.5",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.3.0",
     "tsyringe": "^4.8.0",
