--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "lint": "eslint src --ext ts,tsx",
     "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
-    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
-    "schema": "prisma-import --schemas src/shared/infra/prisma/config.prisma --schemas src/modules/*/infra/prisma/entities/*.prisma --output src/shared/infra/prisma/schema.prisma --force"
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files"
   },
   "prisma": {
     "schema": "src/shared/infra/prisma/schema"
@@ -22,6 +21,8 @@
     "@babel/plugin-proposal-decorators": "^7.12.13",
     "@babel/preset-env": "^7.12.17",
     "@babel/preset-typescript": "^7.12.17",
+    "@eslint/config-array": "^0.18.0",
+    "@eslint/object-schema": "^2.1.4",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
@@ -29,14 +30,14 @@
     "@types/nodemailer": "^6.4.0",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-typescript-metadata": "^0.3.1",
-    "eslint": "^7.20.0",
-    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint": "^8.0.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-import": "^2.31.0",
     "ts-node-dev": "^1.1.1",
     "typescript": "^5.6.3"
   },
