--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,8 @@
     "import/no-unresolved": "off",
     "linebreak-style": "off",
     "no-useless-constructor": "off",
-    "no-empty-function": ["error", { "allow": ["constructor"] }],
+    "no-empty-function": "off",
+    "@typescript-eslint/no-empty-function": "error",
     "no-underscore-dangle": "off",
     "class-methods-use-this": "off",
     "max-len": "off",
@@ -32,8 +33,13 @@
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
+        "args": "all",
         "argsIgnorePattern": "^_",
-        "varsIgnorePattern": "^_"
+        "caughtErrors": "all",
+        "caughtErrorsIgnorePattern": "^_",
+        "destructuredArrayIgnorePattern": "^_",
+        "varsIgnorePattern": "^_",
+        "ignoreRestSiblings": true
       }
     ],
     "@typescript-eslint/naming-convention": [
