:sparkles: feat: substitute default mailing with mailjet

--- a/.env.example
+++ b/.env.example
@@ -3,15 +3,14 @@ PORT=
 # JWT Secret
 APP_SECRET=
 
-# Mailing infos
-MAIL_DRIVER=ethereal
-DEFAULT_EMAIL_ADDRESS=
-DEFAULT_MAILER_NAME=
+# Mailjet
+MAILJET_API_KEY="sua_api_key_sem_as_aspas"
+MAILJET_API_SECRET="sua_secret_key_sem_as_aspas"
 
-# SES
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=
+# Mailing infos
+MAIL_DRIVER=mailjet // nesse caso, mas podem ser outros
+DEFAULT_EMAIL_ADDRESS="email_que_vai_mandar_sem_as_aspas"
+DEFAULT_MAILER_NAME="nome_da_pessoa_que_vai_mandar_o_email_sem_as_aspas"
 
 # DATABASE CONECTION
 # DATABASE_URL="postgresql://postgres:password@localhost:5432/nome_do_projeto?schema=public"
