--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express-validator": "^7.1.0",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
+    "node-mailjet": "^6.0.6",
     "nodemailer": "^6.4.18",
     "openapi-types": "^10.0.0",
     "pg": "^8.5.1",
